list view working. however, cipher has unexpected results for certain chars

--- a/letterbox/templates/inbox/list.html
+++ b/letterbox/templates/inbox/list.html
@@ -4,9 +4,11 @@
 
 {% block content %}
 <div>
-    {% for message in secret_message %}
+    {% for message in encrypted_messages %}
     <div>
+        <p>
         {{ message.text }}
+        </p>
     </div>
 
     {% endfor %}
