--- a/letterbox/templates/base.html
+++ b/letterbox/templates/base.html
@@ -9,8 +9,14 @@
     <header>
         <nav>
             <div>
+                {% if user.is_authenticated %}
                 <a href="{% url 'inbox_list' %}">My Inbox</a>
-
+                <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'compose' %}">Compose Secret Message</a>
+                {% else %}
+                <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'signup' %}">Signup</a>
+                {% endif %}
             </div>
         </nav>
     </header>
