--- a/letterbox/templates/base.html
+++ b/letterbox/templates/base.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
-    <links href="">
+    <link rel="stylesheet" href="{% static 'css/cipher.css' %}">
 </head>
 <body>
     <header>
