--- a/letterbox/templates/inbox/list.html
+++ b/letterbox/templates/inbox/list.html
@@ -6,6 +6,8 @@
 <div>
     {% for message in encrypted_messages %}
     <div>
+        <p>From {{ message.sender }}</p>
+        <p><a href="{% url 'detail' message.mess_id %}">{{ message.subject }}</a></p>
         <p>
         {{ message.text }}
         </p>
