--- a/letterbox/templates/inbox/list.html
+++ b/letterbox/templates/inbox/list.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 <div>
-    {% for message in encrypted_messages %}
+    {% for message in secret_messages %}
     <div>
         <p>From {{ message.sender }}</p>
-        <p><a href="{% url 'detail' message.mess_id %}">{{ message.subject }}</a></p>
+        <p><a href="{% url 'detail' message.id %}">{{ message.subject }}</a></p>
         <p>
-        {{ message.text }}
+        {{ message.encrypted_text }}
         </p>
     </div>
 
