added an about page

--- a/letterbox/templates/base.html
+++ b/letterbox/templates/base.html
@@ -20,6 +20,7 @@
                 <a href="{% url 'signup' %}">Signup</a>
                 {% endif %}
                 <a href="{% url 'board' %}">Message Board</a>
+                <a href="{% url 'about' %}">about EnCode</a>
             </div>
         </nav>
     </header>
