added more to the about page.

--- a/letterbox/templates/inbox/about.html
+++ b/letterbox/templates/inbox/about.html
@@ -11,11 +11,20 @@
         try composing a message to another user and viewing the message on the public message board
         in its encrypted state. Just remember to write down the encryption key you used!
 
-        Note: For now, once the encryption key is entered by another user, it will be publically
-        available unless overwritten.
+
 
 
 
     </p>
+    <p>
+        Note: For now, once the encryption key is entered by another user, it will be publically
+        available unless overwritten.
+    </p>
+    <p>
+        How to manually use an alphabet cipher:
+        <a href="https://en.wikipedia.org/wiki/The_Alphabet_Cipher">Wiki for The Alphabet Cipher</a>
+    </p>
+    <img src="https://d3i71xaburhd42.cloudfront.net/b638ab014ae0d4d2272516bff722d49c6c9c5078/6-Figure1-1.png">
+
 </div>
 {% endblock content %}
