--- a/letterbox/templates/base.html
+++ b/letterbox/templates/base.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/cipher.css' %}">
+    {% if user.is_authenticated %}
+    {% for stylesheet in user.preferences.all %}
+    <link rel="stylesheet" href="{% static stylesheet.display_mode.stylesheet %}">
+    {% endfor %}
+    {% endif %}
+
 </head>
 <body>
     <header>
@@ -15,6 +21,7 @@
                 <a href="{% url 'inbox_list' %}">My Inbox</a>
                 <a href="{% url 'logout' %}">Logout</a>
                 <a href="{% url 'compose' %}">Compose Secret Message</a>
+                <a href="{% url 'preferences' %}">Settings</a>
                 {% else %}
                 <a href="{% url 'login' %}">Login</a>
                 <a href="{% url 'signup' %}">Signup</a>
